--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 40px;
-    background-color: #8e2d56; 
+    /* background-color: #8e2d56;  */
 }
   
 .welcome-text {
@@ -13,6 +13,7 @@
 .welcome-text h1 {
     color: white;
     font-size: 2.5rem;
+    font-family: Montserrat;
 }
   
 .highlight {
@@ -21,6 +22,7 @@
   
 .welcome-text p {
     color: #f2f2f2;
+    font-family: Montserrat;
     margin-top: 20px;
 }
   
@@ -32,9 +34,9 @@
 .build-team-btn {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #ff5773;
+    background-image: linear-gradient(to right, #D87199, white);
     border: none;
-    color: white;
+    color: black;
     border-radius: 20px;
     cursor: pointer;
     font-size: 1.1rem;
