Login, SignUp and Profile page is done

--- a/src/Pages/CSS/Home.css
+++ b/src/Pages/CSS/Home.css
@@ -1,5 +1,7 @@
 .home{
     background: url('src/Components/assets/landing page uip.png');
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-bottom: 50px;
 }
