--- a/src/Components/Hackathon/Hackathon.css
+++ b/src/Components/Hackathon/Hackathon.css
@@ -1,4 +1,3 @@
-/* General Styling for the Hackathon Section */
 .hackathon-section {
   padding: 20px;
   padding-right: 10px;
@@ -18,6 +17,7 @@
 .search-bar-container {
   position: relative;
   width: 60%;
+  margin-left: -25px;
 }
 
 .search-bar {
@@ -41,7 +41,7 @@
 
 .bootcamp-button {
   padding: 10px 20px;
-  margin-right: 13px;
+  margin-right: -10px;
   background-image: linear-gradient(to right, #DB7AA4, white);
   color: black;
   font-weight: 700;
