--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,9 +1,6 @@
-/* Sidebar.css */
-
 .sidebar {
     width: 250px;
     height: 100vh;
-    /* background-color: #400B24; */
     color: white;
     padding-top: 20px;
     display: flex;
@@ -20,7 +17,7 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    border: 2px solid #ff6699; /* Profile image border color */
+    border: 2px solid #ff6699; 
   }
   
   .sidebar .profile h3 {
@@ -53,15 +50,4 @@
     margin-right: 10px;
   }
   
-  .sidebar nav ul li:hover {
-    background-color: #ff6699; /* Hover background color */
-  }
-  
-  .sidebar nav ul li:hover img {
-    filter: brightness(0) invert(1); /* Changes icon color on hover */
-  }
-  
-  .sidebar nav ul li:hover, .sidebar nav ul li:hover p {
-    color: #fff;
-  }
   
