--- a/src/Components/HackathonCard/HackathonCard.css
+++ b/src/Components/HackathonCard/HackathonCard.css
@@ -1,11 +1,7 @@
-/* HackathonCard.css */
-
-/* Hackathon Card Styling */
 .hackathon-card {
     background-color: #64062B;
     border-radius: 20.78px;
     width: 250px;
-    /* padding: 15px; */
     display: flex;
     flex-direction: column;
   }
@@ -17,13 +13,11 @@
     object-fit: cover;
     border-top-left-radius: 20.78px;
     border-top-right-radius: 20.78px;
-
-    /* margin-bottom: 10px; */
   }
   
   .hackathon-card-content h3 {
     font-size: 18.89px;
-    color: white; /* Light pink color for the card title */
+    color: white; 
     margin: 10px 0;
   }
 
@@ -36,11 +30,10 @@
   
   .hackathon-card-content p {
     font-size: 0.85em; 
-    color: #c4c4c4; /* Light gray color for the card description */
+    color: #c4c4c4; 
     margin-bottom: 15px;
   }
   
-  /* Button Styling */
   .hackathon-card-buttons {
     display: flex;
     gap: 20px;
@@ -60,7 +53,7 @@
   }
 
   .know-more{
-    background-color: transparent; /* Light pink for buttons */
+    background-color: transparent; 
     color: white;
     border: 2px solid;
     border-radius: 36.84px;
@@ -72,6 +65,6 @@
   }
   
   .quick-apply:hover, .know-more:hover {
-    background-color: #ff4d88; /* Darker pink on hover */
+    background-color: #ff4d88; 
   }
   
