--- a/src/Components/HeroBottom/HeroBottom.css
+++ b/src/Components/HeroBottom/HeroBottom.css
@@ -39,7 +39,7 @@
 
   
   .icon {
-    width: 50px; /* Adjust size of icons */
+    width: 50px; 
     height: auto;
     background: none;
   }
@@ -48,10 +48,8 @@
     border-left: 1px solid #C0B7E8;
     height: 110px;
     opacity: 25%;
-    /* margin-right: 0px; */
   }
   
-  /* Responsive styling */
   @media (max-width: 768px) {
     .bottom-section {
       flex-direction: column;
